src/core-crm/objects/Opportunity/Opportunity.object-meta.xml
<CustomObject>
    <compactLayoutAssignment
  >New_Awesome_Compact_Layout</compactLayoutAssignment>
    <sharingModel>Read</sharingModel>
</CustomObject>