src/core-crm/objects/Opportunity/fields/Assessment_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Outcome__c</fullName>
    <description>Indicates whether the Assessment is successful or not.</description>
    <inlineHelpText>Indicates whether the Assessment is successful or not.</inlineHelpText>
    <label>Assessment Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Successful</fullName>
            </value>
            <value>
                <fullName>Unsuccessful</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>