src/core-crm/objects/Opportunity/fields/Assessment_Supporting_Comment__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Supporting_Comment__c</fullName>
    <description>Additional description of the assessment outcome.</description>
    <label>Assessment Supporting Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>