src/core-crm/objects/Opportunity/fields/CLMS_Contract_ID__c.field-meta.xml
<CustomField>
    <fullName>CLMS_Contract_ID__c</fullName>
    <description>The CLMS Contract Id for the Corporate Partnership Contract document.</description>
    <label>CLMS Contract ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>