src/core-crm/objects/Opportunity/fields/CLMS_Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>CLMS_Contract_Status__c</fullName>
    <description>CLMS Contract Status.</description>
    <label>CLMS Contract Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Negotiation</fullName>
            </value>
            <value>
                <fullName>Internally Approved</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>