src/core-crm/objects/Opportunity/fields/Contract_ID__c.field-meta.xml
<CustomField>
    <fullName>Contract_ID__c</fullName>
    <externalId>true</externalId>
    <label>Contract ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>