src/core-crm/objects/Opportunity/fields/Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>Contract_Status__c</fullName>
    <description>The status of the Contract in CLMS.</description>
    <label>Contract Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>