src/core-crm/objects/Opportunity/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard Income Contract</fullName>
            </value>
            <value>
                <fullName>Standing Offer Arrangement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>