src/core-crm/objects/Opportunity/fields/Contract_URL__c.field-meta.xml
<CustomField>
    <fullName>Contract_URL__c</fullName>
    <label>Contract URL</label>
    <type>Url</type>
</CustomField>