src/core-crm/objects/Opportunity/fields/Donor_Ability_Rank__c.field-meta.xml
<CustomField>
    <fullName>Donor_Ability_Rank__c</fullName>
    <description>Captures the Contact’s or Organisation’s ‘Ability’ to donate with regard to a specific Opportunity.</description>
    <inlineHelpText>Captures the Contact’s or Organisation’s ‘Ability’ to donate with regard to a specific Opportunity.</inlineHelpText>
    <label>Donor Ability Rank</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$1K - $10K</fullName>
            </value>
            <value>
                <fullName>$10K - $25K</fullName>
            </value>
            <value>
                <fullName>$25K - $250K</fullName>
            </value>
            <value>
                <fullName>$250K - $500K</fullName>
            </value>
            <value>
                <fullName>$500K - $1Million</fullName>
            </value>
            <value>
                <fullName>$1 Million +</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>