src/core-crm/objects/Opportunity/fields/Donor_Interest_Comment__c.field-meta.xml
<CustomField>
    <fullName>Donor_Interest_Comment__c</fullName>
    <description>Business comment relating to the Interest score.</description>
    <inlineHelpText>Business comment relating to the Interest score.</inlineHelpText>
    <label>Donor Interest Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>