src/core-crm/objects/Opportunity/fields/Donor_Interest_Rank__c.field-meta.xml
<CustomField>
    <fullName>Donor_Interest_Rank__c</fullName>
    <description>Captures the Contact’s or Organisation’s ‘Interest’ in donating with regard to a specific Opportunity.</description>
    <inlineHelpText>Captures the Contact’s or Organisation’s ‘Interest’ in donating with regard to a specific Opportunity.</inlineHelpText>
    <label>Donor Interest Rank</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Interest</fullName>
            </value>
            <value>
                <fullName>Unknown or not assessed</fullName>
            </value>
            <value>
                <fullName>Low Level of Interest</fullName>
            </value>
            <value>
                <fullName>Moderate Interest</fullName>
            </value>
            <value>
                <fullName>High Level of Interest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>