src/core-crm/objects/Opportunity/fields/Donor_Linkage_Rank__c.field-meta.xml
<CustomField>
    <fullName>Donor_Linkage_Rank__c</fullName>
    <description>Captures the Contact’s or Organisation’s ‘Linkages’ (i.e. their personal and professional connections), in relation to donating with regard to a specific Opportunity.</description>
    <inlineHelpText>Captures the Contact’s or Organisation’s ‘Linkages’ (i.e. their personal and professional connections), in relation to donating with regard to a specific Opportunity.</inlineHelpText>
    <label>Donor Linkage Rank</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Link</fullName>
            </value>
            <value>
                <fullName>Low Level of Connection</fullName>
            </value>
            <value>
                <fullName>Moderate Level of Connection</fullName>
            </value>
            <value>
                <fullName>High Level of Connection</fullName>
            </value>
            <value>
                <fullName>Very Highly Connected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>