src/core-crm/objects/Opportunity/fields/Due_Diligence_Completed__c.field-meta.xml
<CustomField>
    <fullName>Due_Diligence_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the Due Diligence processes have been completed.</description>
    <inlineHelpText>Indicates if the Due Diligence processes have been completed.</inlineHelpText>
    <label>Due Diligence Complete</label>
    <type>Checkbox</type>
</CustomField>