src/core-crm/objects/Opportunity/fields/Due_Diligence_Summary__c.field-meta.xml
<CustomField>
    <fullName>Due_Diligence_Summary__c</fullName>
    <description>Summary of the processes completed as part of due diligence checks.</description>
    <inlineHelpText>Summary of the processes completed as part of due diligence checks.</inlineHelpText>
    <label>Due Diligence Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>