src/core-crm/objects/Opportunity/fields/Existing_Client_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Existing_Client_Relationship__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Existing Client Relationship</label>
    <type>Checkbox</type>
</CustomField>