src/core-crm/objects/Opportunity/fields/Existing_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Existing_Relationship__c</fullName>
    <inlineHelpText>Are there existing relationships within the organisation</inlineHelpText>
    <label>Existing Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>