src/core-crm/objects/Opportunity/fields/Expected_Completion_Timeframe__c.field-meta.xml
<CustomField>
    <fullName>Expected_Completion_Timeframe__c</fullName>
    <description>The estimated time-frame of the Opportunity.</description>
    <inlineHelpText>The estimated time-frame of the Opportunity.</inlineHelpText>
    <label>Expected Completion Timeframe</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-1 Month</fullName>
            </value>
            <value>
                <fullName>1-3 Months</fullName>
            </value>
            <value>
                <fullName>3-6 Months</fullName>
            </value>
            <value>
                <fullName>More than 6 Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>