src/core-crm/objects/Opportunity/fields/Faculty_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Faculty_Capacity__c</fullName>
    <inlineHelpText>Do we have Faculty capacity?</inlineHelpText>
    <label>Faculty Capacity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>