src/core-crm/objects/Opportunity/fields/Finalise_Legal_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Finalise_Legal_Agreement__c</fullName>
    <description>Indicates if legal agreements have been finalised.</description>
    <label>Finalise Legal Agreement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>