src/core-crm/objects/Opportunity/fields/Financial_Viability__c.field-meta.xml
<CustomField>
    <fullName>Financial_Viability__c</fullName>
    <inlineHelpText>Financial Viability: Respective price points have been discussed</inlineHelpText>
    <label>Financial Viability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>