src/core-crm/objects/Opportunity/fields/Foreign_Interference_Checklist__c.field-meta.xml
<CustomField>
    <fullName>Foreign_Interference_Checklist__c</fullName>
    <description>Indicates if the foreign interference checklist is completed.</description>
    <label>Foreign Interference Checklist</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>