src/core-crm/objects/Opportunity/fields/Giving_Category__c.field-meta.xml
<CustomField>
    <fullName>Giving_Category__c</fullName>
    <description>The giving category or categories, the Opportunity Participant is interested in donating to.</description>
    <inlineHelpText>The giving category or categories, the Opportunity Participant is interested in donating to.</inlineHelpText>
    <label>Giving Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Support Students</fullName>
            </value>
            <value>
                <fullName>Support Community</fullName>
            </value>
            <value>
                <fullName>Support Research</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>