src/core-crm/objects/Opportunity/fields/Giving_Category_Comment__c.field-meta.xml
<CustomField>
    <fullName>Giving_Category_Comment__c</fullName>
    <description>Business comment in relation to the selected giving category or categories.</description>
    <inlineHelpText>Business comment in relation to the selected giving category or categories.</inlineHelpText>
    <label>Giving Category Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>