src/core-crm/objects/Opportunity/fields/Giving_Faculty__c.field-meta.xml
<CustomField>
    <fullName>Giving_Faculty__c</fullName>
    <description>The QUT faculty or faculties, that may benefit from a donation as a result of the Opportunity.</description>
    <inlineHelpText>The QUT faculty or faculties, that may benefit from a donation as a result of the Opportunity.</inlineHelpText>
    <label>Giving Faculty</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Faculty of Business &amp; Law</fullName>
            </value>
            <value>
                <fullName>Faculty of CI, Education &amp; Social Justice</fullName>
            </value>
            <value>
                <fullName>Faculty of Engineering</fullName>
            </value>
            <value>
                <fullName>Faculty of Health</fullName>
            </value>
            <value>
                <fullName>Faculty of Science</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>