src/core-crm/objects/Opportunity/fields/Giving_Faculty_Comment__c.field-meta.xml
<CustomField>
    <fullName>Giving_Faculty_Comment__c</fullName>
    <description>Business comment in relation to the selected faculty or faculties.</description>
    <inlineHelpText>Business comment in relation to the selected faculty or faculties.</inlineHelpText>
    <label>Giving Faculty Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>