src/core-crm/objects/Opportunity/fields/Initial_Proposal_Approved__c.field-meta.xml
<CustomField>
    <fullName>Initial_Proposal_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Initial Proposal Approved</label>
    <type>Checkbox</type>
</CustomField>