src/core-crm/objects/Opportunity/fields/Initial_Proposal_URL__c.field-meta.xml
<CustomField>
    <fullName>Initial_Proposal_URL__c</fullName>
    <label>Initial Proposal URL</label>
    <type>Url</type>
</CustomField>