src/core-crm/objects/Opportunity/fields/Internal_Expertise__c.field-meta.xml
<CustomField>
    <fullName>Internal_Expertise__c</fullName>
    <description>Indicates that QUT has internal expertise to support the Opportunity.</description>
    <inlineHelpText>Indicates that QUT has internal expertise to support the Opportunity.</inlineHelpText>
    <label>Internal Expertise</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>