src/core-crm/objects/Opportunity/fields/Is_a_Tender_Requires_Legal_Review__c.field-meta.xml
<CustomField>
    <fullName>Is_a_Tender_Requires_Legal_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is a Tender - Requires Legal Review</label>
    <type>Checkbox</type>
</CustomField>