src/core-crm/objects/Opportunity/fields/Is_Agreement_Signed__c.field-meta.xml
<CustomField>
    <fullName>Is_Agreement_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the Agreement has been signed.</description>
    <inlineHelpText>Indicates if the Agreement has been signed.</inlineHelpText>
    <label>Is Agreement Signed</label>
    <type>Checkbox</type>
</CustomField>