src/core-crm/objects/Opportunity/fields/Is_Anonymous_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Is_Anonymous_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the Opportunity is managed as an anonymous record.</description>
    <inlineHelpText>Indicates the Opportunity is managed as an anonymous record.</inlineHelpText>
    <label>Is Anonymous Opportunity</label>
    <type>Checkbox</type>
</CustomField>