src/core-crm/objects/Opportunity/fields/Is_Due_Diligence_Complete__c.field-meta.xml
<CustomField>
    <fullName>Is_Due_Diligence_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the Due Diligence processes have been completed.</description>
    <inlineHelpText>Indicates if the Due Diligence processes have been completed.</inlineHelpText>
    <label>Is Due Diligence Complete</label>
    <type>Checkbox</type>
</CustomField>