src/core-crm/objects/Opportunity/fields/Is_Influenced_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Is_Influenced_Revenue__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies an Influenced Revenue Opportunity.</description>
    <inlineHelpText>Identifies an Influenced Revenue Opportunity.</inlineHelpText>
    <label>Is Influenced Revenue</label>
    <type>Checkbox</type>
</CustomField>