src/core-crm/objects/Opportunity/fields/Is_Qualified__c.field-meta.xml
<CustomField>
    <fullName>Is_Qualified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the Opportunity has been qualified.</description>
    <inlineHelpText>Indicates if the Opportunity has been qualified.</inlineHelpText>
    <label>Is Qualified</label>
    <type>Checkbox</type>
</CustomField>