src/core-crm/objects/Opportunity/fields/Lead_School__c.field-meta.xml
<CustomField>
    <fullName>Lead_School__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead School</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>OpportunitiesLead</relationshipName>
    <type>Lookup</type>
</CustomField>