src/core-crm/objects/Opportunity/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <label>Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>No-Bid : Faculty Decision</fullName>
            </value>
            <value>
                <fullName>No-Bid : QUTeX Decision</fullName>
            </value>
            <value>
                <fullName>No-Bid : QUTeX &amp; Faculty Decision</fullName>
            </value>
            <value>
                <fullName>Client Rejected: Declined to give a reason</fullName>
            </value>
            <value>
                <fullName>Client Rejected: Contract Terms</fullName>
            </value>
            <value>
                <fullName>Client Rejected: QUT Solution not a fit</fullName>
            </value>
            <value>
                <fullName>Client Rejected: Price</fullName>
            </value>
            <value>
                <fullName>Client Cancelled: Funding change</fullName>
            </value>
            <value>
                <fullName>Client Cancelled: Change of mind</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>