src/core-crm/objects/Opportunity/fields/Loss_Reason_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason_Explanation__c</fullName>
    <inlineHelpText>Additional business explanation about the Loss Reason.</inlineHelpText>
    <label>Loss Reason Explanation</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>