src/core-crm/objects/Opportunity/fields/Loss_Stage__c.field-meta.xml
<CustomField>
    <fullName>Loss_Stage__c</fullName>
    <label>Loss Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Qualification</fullName>
            </value>
            <value>
                <fullName>Initial Proposal</fullName>
            </value>
            <value>
                <fullName>QUTeX Executive Approval</fullName>
            </value>
            <value>
                <fullName>Client Rejected Proposal</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>