src/core-crm/objects/Opportunity/fields/Memo_Approver_1__c.field-meta.xml
<CustomField>
    <fullName>Memo_Approver_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Captures that the memo has been approved by the 1st authorised QUT staff member.</description>
    <label>Memo Approver 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>