src/core-crm/objects/Opportunity/fields/Memo_Approver_2__c.field-meta.xml
<CustomField>
    <fullName>Memo_Approver_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Captures that the memo has been approved by the 2nd authorised QUT staff member.</description>
    <label>Memo Approver 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>