src/core-crm/objects/Opportunity/fields/Memo_Endorsed__c.field-meta.xml
<CustomField>
    <fullName>Memo_Endorsed__c</fullName>
    <description>Indicates whether the Memo has been endorsed.</description>
    <label>Memo Endorsed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>