src/core-crm/objects/Opportunity/fields/Memo_PDF_URL__c.field-meta.xml
<CustomField>
    <fullName>Memo_PDF_URL__c</fullName>
    <description>Captures the URL of the Memo PDF document</description>
    <label>Memo PDF URL</label>
    <type>Url</type>
</CustomField>