src/core-crm/objects/Opportunity/fields/Memo_Status__c.field-meta.xml
<CustomField>
    <fullName>Memo_Status__c</fullName>
    <description>Indicates the status of the Memo.</description>
    <inlineHelpText>Indicates the status of the Memo.</inlineHelpText>
    <label>Memo Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Generated</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>