src/core-crm/objects/Opportunity/fields/Migration_Key__c.field-meta.xml
<CustomField>
    <fullName>Migration_Key__c</fullName>
    <description>*For migrated records only:* the system from which the record was migrated and the business identifier of the record in that system</description>
    <externalId>true</externalId>
    <label>Migration Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>