src/core-crm/objects/Opportunity/fields/Negotiation_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Negotiation_Outcome__c</fullName>
    <description>Indicates if negotiations have been successful.</description>
    <label>Negotiation Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Successful</fullName>
            </value>
            <value>
                <fullName>Unsuccessful</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>