src/core-crm/objects/Opportunity/fields/Negotiation_Summary__c.field-meta.xml
<CustomField>
    <fullName>Negotiation_Summary__c</fullName>
    <description>Supporting information about the negotiations.</description>
    <label>Negotiation Summary</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>