src/core-crm/objects/Opportunity/fields/Opportunity_Ability_Comment__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Ability_Comment__c</fullName>
    <description>Business comment relating to the Ability score.</description>
    <inlineHelpText>Business comment relating to the Ability score.</inlineHelpText>
    <label>Opportunity Ability Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>