src/core-crm/objects/Opportunity/fields/Opportunity_Approver__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>