src/core-crm/objects/Opportunity/fields/Opportunity_Interest_Comment__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Interest_Comment__c</fullName>
    <description>Business comment relating to the Interest score.</description>
    <inlineHelpText>Business comment relating to the Interest score.</inlineHelpText>
    <label>Opportunity Interest Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>