src/core-crm/objects/Opportunity/fields/Opportunity_Linkage_Comment__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Linkage_Comment__c</fullName>
    <description>Business comment relating to the Linkage score.</description>
    <inlineHelpText>Business comment relating to the Linkage score.</inlineHelpText>
    <label>Opportunity Linkage Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>