src/core-crm/objects/Opportunity/fields/Owning_Faculty__c.field-meta.xml
<CustomField>
    <fullName>Owning_Faculty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The QUT Faculty leading the Opportunity.</inlineHelpText>
    <label>Owning Faculty</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Organization_Unit_Level__c</field>
            <operation>equals</operation>
            <value>2</value>
        </filterItems>
        <filterItems>
            <field>Account.End_Date__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>