src/core-crm/objects/Opportunity/fields/Probability_Of_Success__c.field-meta.xml
<CustomField>
    <fullName>Probability_Of_Success__c</fullName>
    <description>The probability, (expressed as a percentage) of the Opportunity being won.</description>
    <inlineHelpText>The probability, (expressed as a percentage) of the Opportunity being won.</inlineHelpText>
    <label>Probability Of Success</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>