src/core-crm/objects/Opportunity/fields/Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Program_Name__c</fullName>
    <label>Program Name</label>
    <length>180</length>
    <type>Text</type>
</CustomField>