src/core-crm/objects/Opportunity/fields/Project_Expertise__c.field-meta.xml
<CustomField>
    <fullName>Project_Expertise__c</fullName>
    <description>Indicates that QUT has the project expertise to support the Opportunity.</description>
    <inlineHelpText>Indicates that QUT has the project expertise to support the Opportunity.</inlineHelpText>
    <label>Project Expertise</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>