src/core-crm/objects/Opportunity/fields/Project_Scoping_Description__c.field-meta.xml
<CustomField>
    <fullName>Project_Scoping_Description__c</fullName>
    <description>Information about the Project Scoping stage for a Research Partnership Opportunity.</description>
    <label>Project Scoping Description</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>